First finished version, pending global testing

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>1.7.4</version>
             <scope>test</scope>
         </dependency>
+        <!-- Reflections Library -->
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -38,6 +44,12 @@
     </repositories>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
