--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -1,8 +1,11 @@
 prefix: "&3[&bAltiQueue&3] &f{message}"
-usage_message: "&6&lUSAGE &e» &f{message}"
-error_message: "&4lERROR &c» &7{message}"
-success_message: "&2&lSUCCESS &a» &f{message}"
-already-queued: "You are already in queue for &b{server}&f. You are at position &b{position}&f."
-direct-connect-full: "&b{server}&f is full. You are at position &b{position}&f in queue. Purchase a donor rank to get a prioritized queue."
+already-queued: "You are already in queue for &b{server}&f. You are at position &c{position}&f."
+direct-connect-full: "&b{server}&f is full. You are at position &c{position}&f in queue. Purchase a donor rank to get a prioritized queue. Type /q leave to leave the queue."
 left-queue: "You have left queue for &b{server}."
-joined-queue: "You have joined the queue for &b{server}&f. You are at position &b{position}&f. Purchase a donor rank to get a prioritized queue."
+joined-queue: "You have joined the queue for &b{server}&f. You are at position &c{position}&f. Purchase a donor rank to get a prioritized queue. Type /q leave to leave the queue."
+connect: "You have been connected to &b{server}&f."
+already-connected: "You are already connected to &b{server}&f."
+position-update: "You are now at position &c{position}&f for &b{server}&f."
+not-queued: "&cYou are not queued for a server."
+only-players: "&cOnly players can run that command."
+check-status: "You are at position &c{position}&f for &b{server}&f. Purchase a donor rank to get a prioritized queue. Type /q leave to leave the queue."
